# ida-mcp-rs

./: .gitignore  .goreleaser.yaml  Cargo.toml  Makefile  README.md  build.rs  justfile
.cargo/: config.toml
.github/workflows/: build.yml
docs/: BUILDING.md  README.md  TESTING.md  TOOLS.md  TRANSPORTS.md
src/: disasm.rs  dsc.rs  error.rs  lib.rs  main.rs  tool_registry.rs  toon.rs
src/ida/: lock.rs  loop_impl.rs  mod.rs  request.rs  types.rs  worker.rs
src/ida/handlers/: annotations.rs  controlflow.rs  database.rs  disasm.rs  functions.rs  globals.rs  imports.rs  memory.rs  mod.rs  script.rs  scripting.rs  search.rs  segments.rs  strings.rs  structs.rs  types.rs  xrefs.rs
src/server/: mod.rs  requests.rs  task.rs
src/session/: manager.rs  mod.rs  port_allocator.rs  server.rs  types.rs
test/: .gitignore  Makefile  README.md  http_integration.sh  justfile
test/payloads/: dsc.jsonl  mini.jsonl  script.jsonl
