[package]
name = "ida-mcp"
version = "0.1.0"
edition = "2021"
description = "Headless IDA Pro MCP Server"
license = "MIT"
repository = "https://github.com/blacktop/ida-mcp-rs"
authors = ["blacktop"]
keywords = ["ida", "mcp", "reverse-engineering", "disassembly", "decompiler"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
idalib = { git = "https://github.com/blacktop/idalib.git", branch = "disasm-line" }
rmcp = { version = "0.13", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "net", "signal"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "service"] }
bytes = "1"
http-body = "1"
http-body-util = "0.1"
tower-service = "0.3"

[build-dependencies]
idalib-build = { git = "https://github.com/blacktop/idalib.git", branch = "disasm-line", package = "idalib-build" }
